feat(list): creating app appearance logic

--- a/DopeSquad/DopeSquad/Strings/Localizable.strings
+++ b/DopeSquad/DopeSquad/Strings/Localizable.strings
@@ -9,6 +9,8 @@
 // MARK: - View Elements Strings
 "confirmButton_title" = "Ok";
 "backButton_title" = "Back";
+"unknownHero_description" = "Nothing on our records";
+"unknownHero_name" = "Unknown Hero";
 
 // MARK: - Error Messages
 "genericError_title" = "Error";
