--- a/DopeSquad/DopeSquad/Strings/Localizable.strings
+++ b/DopeSquad/DopeSquad/Strings/Localizable.strings
@@ -9,7 +9,7 @@
 // MARK: - View Elements Strings
 "confirmButton_title" = "Ok";
 "backButton_title" = "Back";
-"unknownHero_description" = "Nothing on our records";
+"unknownHero_description" = "No biography on our records";
 "unknownHero_name" = "Unknown Hero";
 "recruitToSquad_buttonTitle" = "💪 Recruit to Squad";
 "fireFromSquad_buttonTitle" = "🔥 Fire from Squad";
